Added generator funcionality, cleaned up js

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
             <h2>Please choose from the following</h2>
             <div>
               <!-- choose password length -->
-              <label for="passwordLength">Quantity (between 8 and 124):</label>
+              <label for="passwordLength">Length (between 8 and 124):</label>
               <input type="number" id="passwordLength" name="quantity" min="8" max="124"><br>
               <!-- choose character type -->
               <p>Please choose characters you wish to include:</p>
               <input type="checkbox" id="lowerCase" name="lowerCase">
-              <label for="lowerCase">Lowercase</label><br>
+              <label for="lowerCase">lowercase</label><br>
               <input type="checkbox" id="upperCase" name="upperCase">
-              <label for="upperCase">Uppercase</label><br>
+              <label for="upperCase">UPPERCASE</label><br>
               <input type="checkbox" id="numbers" name="numbers">
               <label for="numbers">Numeric (123)</label><br>
               <input type="checkbox" id="specialCharacters" name="specialCharacters">
-              <label for="specialCharacters">$pecial Characters</label><br><br>
+              <label for="specialCharacters">Special Characters ($%&*^...)</label><br><br>
               <!-- <input type="submit" value="Submit"> -->
             </div>
           </form>
